<resources>
    <string name="app_name">Blood Donation</string>
    <string name="oct_15_2021">OCT 15 2021</string>
    <string name="set_time">Set Time</string>
    <string name="time">Time:</string>
    <string name="date">Date:</string>
    <string name="schedule_new_appointment">Schedule New Appointment</string>
    <string name="what_to_do_before_donaton">What to do before donaton?</string>
    <string name="make_your_donation">Make your donation</string>
    <string name="a">A+</string>
    <string name="_25">25</string>
    <string name="blood_type1">Blood Type</string>
    <string name="age">Age</string>
    <string name="name">Ahmed Yousef</string>
    <string name="patient_details">Patient Details</string>
    <string name="check_to_see_if_any_medications_you_are_taking_or_recently_took_would_prevent_you_from_donating">-Check to see if any medications you are taking or recently took would prevent you from donating.</string>
    <string name="wear_a_shirt_with_sleeves_that_can_be_rolled_up">-Wear a shirt with sleeves that can be rolled up.</string>
    <string name="drink_plenty_of_water_before_the_donation">-Drink plenty of water before the donation.</string>
    <string name="eat_a_healthy_meal_before_your_donation">-Eat a healthy meal before your donation.</string>
    <string name="get_plenty_of_sleep_the_night_before_you_plan_to_donate">-Get plenty of sleep the night before you plan to donate.</string>
    <string name="done_time">Done</string>
    <string name="find">Find</string>
    <string name="google_map_key">AIzaSyB_qsP8AOP_P0Md1Pz-48TDaJYjTP3vbjo</string>
    <string name="blood_type_2">Blood Type</string>
    <string name="preview">Preview</string>
    <string name="date_2">Date:</string>
    <string name="time_2">Time:</string>
    <string name="name_LABEL">Name:</string>
    <string name="age_LABEL">Age:</string>
    <string name="blood_type_LAVEL">Blood Type:</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="name2">Name</string>
    <string name="please_enter_the_details_below">Please Enter the details below</string>
    <string name="email_address2">Email Address</string>
    <string name="insert_new_data">Insert new data</string>
    <string name="update_data">Update data</string>
    <string name="delete_existing_data">Delete Existing data</string>
    <string name="view_data">View data</string>
    <string name="blood_type">Blood Type</string>
    <string name="date_of_appointment">Date of Appointment</string>
    <string name="time_of_appointment">Time of Appointment</string>
    <string name="enter_age">Enter Age</string>
    <string name="admin">Admin</string>
</resources>