<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Admin">


    <TextView
        android:id="@+id/texttitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_the_details_below"
        android:textSize="24dp"
        android:layout_margin="20dp"
        />


    <EditText
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address2"
        android:textSize="24dp"
        android:layout_below="@+id/name"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name2"
        android:textSize="24dp"
        android:layout_below="@+id/texttitle"
        android:inputType="textPersonName"
        />
    <EditText
        android:id="@+id/dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_age"
        android:textSize="24dp"
        android:layout_below="@+id/contact"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/btype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dob"
        android:hint="@string/blood_type"
        android:inputType="text"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/date1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btype"
        android:hint="@string/date_of_appointment"
        android:inputType="text"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/Time1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date1"
        android:hint="@string/time_of_appointment"
        android:inputType="text"
        android:textSize="24dp" />


    <Button
        android:id="@+id/btninsert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Time1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/insert_new_data"
        android:textSize="24dp" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btninsert"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="@string/update_data"
        android:textSize="24dp" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnUpdate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:text="@string/delete_existing_data"
        android:textSize="24dp" />

    <Button
        android:id="@+id/btnView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnDelete"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:minHeight="48dp"
        android:text="@string/view_data"
        android:textSize="24dp"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />


</RelativeLayout>