<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Preview">

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="108dp"
        android:text="@string/name_LABEL"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameofcustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="108dp"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/name_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/age_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="52dp"
        android:text="@string/age_LABEL"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_label" />

    <TextView
        android:id="@+id/age_recall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="56dp"
        android:text="@string/_25"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/age_label"
        app:layout_constraintTop_toBottomOf="@+id/nameofcustomer" />

    <TextView
        android:id="@+id/blood_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="56dp"
        android:text="@string/blood_type_LAVEL"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_label" />

    <TextView
        android:id="@+id/blood_type_catch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="56dp"
        android:text="@string/a"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/blood_type_label"
        app:layout_constraintTop_toBottomOf="@+id/age_recall" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="59dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_header" />

    <TextView
        android:id="@+id/previewtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preview"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="68dp"
        android:text="@string/date"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blood_type_label" />

    <TextView
        android:id="@+id/date_preview"
        android:layout_width="98dp"
        android:layout_height="44dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="68dp"
        android:text="@string/oct_15_2021"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/date_title"
        app:layout_constraintTop_toBottomOf="@+id/blood_type_catch" />

    <TextView
        android:id="@+id/Time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="104dp"
        android:text="@string/time"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_title" />

    <TextView
        android:id="@+id/time_preview_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="84dp"
        android:text="@string/set_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/Time_label"
        app:layout_constraintTop_toBottomOf="@+id/date_preview" />
</androidx.constraintlayout.widget.ConstraintLayout>