<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Daytime">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="131dp"
        android:layout_height="126dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="72dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/download" />

    <TextView
        android:id="@+id/date_label"
        android:layout_width="108dp"
        android:layout_height="30dp"
        android:layout_below="@+id/imageView2"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/date"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/datePickerButton"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/datePickerButton"
        style="?android:spinnerStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="48dp"
        android:onClick="openDatePicker"
        android:text="@string/oct_15_2021"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="49dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_header" />

    <TextView
        android:id="@+id/time_label"
        android:layout_width="92dp"
        android:layout_height="29dp"
        android:layout_marginStart="56dp"
        android:text="@string/time"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/time"
        android:layout_width="124dp"
        android:layout_height="51dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/buttonlogin"
        android:onClick="popTimePicker"
        android:text="@string/set_time"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePickerButton"
        app:layout_constraintVertical_bias="0.145" />

    <Button
        android:id="@+id/go_to_locationbtn"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginBottom="176dp"
        android:background="@drawable/buttonlogin"
        android:text="@string/done_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="gotoLocation"/>

</androidx.constraintlayout.widget.ConstraintLayout>